Setup performance testing

--- a/jonason.xcodeproj/xcshareddata/xcschemes/jonason.xcscheme
+++ b/jonason.xcodeproj/xcshareddata/xcschemes/jonason.xcscheme
@@ -53,6 +53,11 @@
                BlueprintName = "jonasonTests"
                ReferencedContainer = "container:jonason.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "PerformanceTests">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
